<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.statefarm.fmdd.udacityportfolio.MainActivity">

    <Button
        android:text="@string/popular_movies"
        android:id="@+id/button_popular_movies"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/stock_hawk"
        android:id="@+id/button_stock_hawk"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/make_your_app_material"
        android:id="@+id/button_make_your_app_material"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/go_ubiquitous"
        android:id="@+id/button_go_ubiquitous"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        style="@style/PortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
